# client-server

./: README.md  cli.c  client.c  lookup.cpp  serv.c  server.c
src/: CMakeLists.txt
src/clisrv/: CMakeLists.txt  cli.cpp  srv.cpp
